[project]
name = "clustered"
version = "0.1.0"
description = "Clustering and morphology utilities built on top of Embeddify"
authors = [{ name = "Bullish-Design", email = "BullishDesignEngineering@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "embeddy",
    "numpy",
    "pydantic>=2",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn",
    "spacy",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
embeddy = { git = "https://github.com/Bullish-Design/embeddy.git" }
